--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <script>
             'use srtrict';
 
@@ -9,13 +10,13 @@
                 return Math.random() * n;
             }
         
-            function computerPlay ()    //randomly return "Rock", "Paper" or "Scissors"
+            function computerPlay()    //randomly return "Rock", "Paper" or "Scissors"
             {
                 let letPickNum = getRandom(3);
                 return letPickNum < 1 ? "Rock" : letPickNum < 2 ? "Paper" : "Scissors";
             }
 
-            function playerPlay ()      //prompting pleer to choose his object
+            function playerPlay()      //prompting pleer to choose his object
             {
                 let playerChoise;
                 do
@@ -32,7 +33,7 @@
             function capitalixe(text)   //capitalaizing the first letter of given string
             {
                 let LowerText = "";
-                for(let i = 1, len = text.length; i < len; i++)
+                for (let i = 1, len = text.length; i < len; i++)
                 {
                     LowerText += text[i].toLowerCase();
                 }
@@ -49,11 +50,11 @@
                 return `You lose! ${computerChoice} beats ${playerChoice}`;
             }
 
-            function playRound(computerChoice, playerChoice)    //the one round of Rock, Paper, Scissors
+            function playRound(computerChoice = computerPlay(), playerChoice = playerPlay())    //the one round of Rock, Paper, Scissors
             {
-                if(computerChoice === "Rock")
+                if (computerChoice === "Rock")
                 {
-                    if(playerChoice === "Paper")
+                    if (playerChoice === "Paper")
                     {
                         return sayWin(playerChoice, computerChoice);
                     }
@@ -66,9 +67,9 @@
                         return "Tie!";
                     }   	
                 }
-                else if(computerChoice === "Paper")
+                else if (computerChoice === "Paper")
                 {
-                    if(playerChoice === "Scissors")
+                    if (playerChoice === "Scissors")
                     {
                         return sayWin(playerChoice, computerChoice);
                     }
@@ -81,12 +82,13 @@
                         return "Tie!";
                     }	
                 }
-                else{
-                    if(playerChoice === "Rock")
+                else
+                {
+                    if (playerChoice === "Rock")
                     {
                         return sayWin(playerChoice, computerChoice);
                     }
-                    else if(playerChoice === "Paper")
+                    else if (playerChoice === "Paper")
                     {
                         return sayLose(playerChoice, computerChoice);
                     }
@@ -102,9 +104,9 @@
                 let playerWins = 0;
                 let computerWins = 0;
 
-                while(playerWins !== 5 && computerWins !== 5)
+                while (playerWins !== 5 && computerWins !== 5)
                 {
-                    let winner = playRound(computerPlay(),playerPlay());
+                    let winner = playRound();
                     console.log(winner);
                     if (winner.search("win!") != -1)
                     {
